hard-gists/8470123/run.log
=== Docker Run Log for 8470123 ===
Started at: Mi 29. Okt 17:49:20 CET 2025

[2025-10-29 17:49:25] START: Running container for 8470123
[2025-10-29 17:49:26] SUCCESS: Container fd8dd4386833a35651e8798f2b78b26a1c7518674cf2ced7a7082b63da6d96c1 started for 8470123
=== Container logs for 8470123 ===
Traceback (most recent call last):
  File "/snippet.py", line 177, in <module>
    from hash_ring import HashRing
  File "/usr/local/lib/python3.11/site-packages/hash_ring/__init__.py", line 5
    except ImportError, e:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 8470123 ===
[2025-10-29 17:49:28] INFO: Container fd8dd4386833a35651e8798f2b78b26a1c7518674cf2ced7a7082b63da6d96c1 has stopped
